--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "Maintenance mode feature for Symfony application.",
   "type": "symfony-bundle",
   "license": "MIT",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "autoload": {
     "psr-4": {
       "Wawoxe\\MaintenanceBundle\\": "src/"
@@ -21,5 +21,20 @@
     "symfony/http-kernel": ">=7.0"
   },
   "require-dev": {
+  },
+  "scripts": {
+    "post-install-cmd": [
+      "composer install --working-dir=tools/php-cs-fixer",
+      "composer install --working-dir=tools/phpstan",
+      "composer install --working-dir=tools/phpmd"
+    ],
+    "phpcs:fix": "tools/php-cs-fixer/vendor/bin/php-cs-fixer fix src",
+    "phpstan:analyse": "tools/phpstan/vendor/bin/phpstan analyse -c tools/phpstan/phpstan.neon",
+    "phpmd:analyse": "tools/phpmd/vendor/bin/phpmd src ansi tools/phpmd/rulesets.xml --strict",
+    "code:analyse": [
+      "@phpcs:fix",
+      "@phpstan:analyse",
+      "@phpmd:analyse"
+    ]
   }
 }
