--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,14 +1,29 @@
+# Configuration file for MaintenanceBundle.
+# Contains parameters and service definitions.
+
 parameters:
+  # Indicates whether maintenance mode is enabled.
+  # Set to true to enable maintenance mode, false otherwise.
   app.maintenance.enabled: true
+
+  # Priority of the maintenance event listener.
+  # Determines the order in which event listeners are executed.
   app.maintenance.priority: 1000
 
 services:
+  # Maintenance response service definition.
   maintenance_response:
-    class: Wawoxe\MaintenanceBundle\Response\DefaultResponse
+    # Class responsible for generating maintenance responses.
+    class: Wawoxe\MaintenanceBundle\Response\MaintenanceDefaultResponse
 
+  # Maintenance event listener service definition.
   Wawoxe\MaintenanceBundle\EventListener\MaintenanceListener:
+    # Tags the service as an event listener for the 'kernel.request' event.
+    # The listener's priority is determined by the value of 'app.maintenance.priority'.
     tags:
       - { name: kernel.event_listener, event: kernel.request, priority: '%app.maintenance.priority%' }
+    # Constructor arguments for the maintenance event listener.
+    # Injects the maintenance response service and the value of 'app.maintenance.enabled'.
     arguments:
       - '@maintenance_response'
       - '%app.maintenance.enabled%'
