--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,10 @@
   "description": "Maintenance mode feature for Symfony application.",
   "type": "symfony-bundle",
   "license": "MIT",
-  "version": "0.0.3",
   "autoload": {
     "psr-4": {
-      "Wawoxe\\MaintenanceBundle\\": "src/"
+      "Wawoxe\\MaintenanceBundle\\": "src/",
+      "Wawoxe\\MaintenanceBundle\\Test\\": "tests/"
     }
   },
   "authors": [
@@ -21,6 +21,10 @@
     "symfony/http-kernel": ">=7.0"
   },
   "require-dev": {
+    "phpunit/phpunit": "^11",
+    "symfony/dependency-injection": ">=7.0",
+    "symfony/config": ">=7.0",
+    "symfony/yaml": ">=7.0"
   },
   "scripts": {
     "post-install-cmd": [
@@ -29,12 +33,15 @@
       "composer install --working-dir=tools/phpmd"
     ],
     "phpcs:fix": "tools/php-cs-fixer/vendor/bin/php-cs-fixer fix src",
+    "phpcs:test:fix": "tools/php-cs-fixer/vendor/bin/php-cs-fixer fix tests",
     "phpstan:analyse": "tools/phpstan/vendor/bin/phpstan analyse -c tools/phpstan/phpstan.neon",
-    "phpmd:analyse": "tools/phpmd/vendor/bin/phpmd src ansi tools/phpmd/rulesets.xml --strict",
+    "phpmd:analyse": "tools/phpmd/vendor/bin/phpmd src tests ansi tools/phpmd/rulesets.xml --strict",
     "code:analyse": [
       "@phpcs:fix",
+      "@phpcs:test:fix",
       "@phpstan:analyse",
       "@phpmd:analyse"
-    ]
+    ],
+    "test": "./vendor/bin/phpunit --configuration phpunit.xml.dist"
   }
 }
