--- a/tools/phpstan/phpstan.neon
+++ b/tools/phpstan/phpstan.neon
@@ -2,5 +2,6 @@ parameters:
     level: max
     paths:
         - ../../src
+        - ../../tests
     excludePaths:
         - ../../src/MaintenanceBundle.php
